@@ -42,16 +42,16 @@
 
    -->
     <publisher> 
-      <publishername>GNOME Documentation Project</publishername> 
+      <publishername>Proyecto de documentación de Gnome</publishername> 
     </publisher> 
 
      <legalnotice id="legalnotice">
-	<para>Permission is granted to copy, distribute and/or modify this document under the terms of the GNU Free Documentation License (GFDL), Version 1.1 or any later version published by the Free Software Foundation with no Invariant Sections, no Front-Cover Texts, and no Back-Cover Texts. You can find a copy of the GFDL at this <ulink type="help" url="ghelp:fdl">link</ulink> or in the file COPYING-DOCS distributed with this manual.</para>
-         <para>This manual is part of a collection of GNOME manuals distributed under the GFDL. If you want to distribute this manual separately from the collection, you can do so by adding a copy of the license to the manual, as described in section 6 of the license.</para>
+	<para>Se otorga permiso para copiar, distribuir y/o modificar este documento bajo los términos de la Licencia de Documentación Libre de GNU, Versión 1.1 o cualquier otra versión posterior publicada por la Free Software Foundation; sin Secciones Invariantes ni Textos de Cubierta Delantera ni Textos de Cubierta Trasera. Puede encontrar una copia de la licencia GFDL en este <ulink type="help" url="ghelp:fdl">enlace</ulink> o en el archivo COPYING-DOCS distribuido con este manual.</para>
+         <para>Este manual es parte de una colección de manuales de Gnome distribuido bajo la GFDL. Si quiere distribuir este manual por separado de la colección, puede hacerlo añadiendo una copia de la licencia al manual, tal como se describe en la sección 6 de la licencia.</para>
 
-	<para>Many of the names used by companies to distinguish their products and services are claimed as trademarks. Where those names appear in any GNOME documentation, and the members of the GNOME Documentation Project are made aware of those trademarks, then the names are in capital letters or initial capital letters.</para>
+	<para>Muchos de los nombres usados por compañías para distinguir sus productos y servicios son mencionados como marcas comerciales. Donde esos nombres aparezcan en cualquier documentación de Gnome, y los miembros del Proyecto de Documentación de Gnome están al corriente de esas marcas comerciales, entonces los nombres se pondrán en mayúsculas o con la inicial en mayúsculas.</para>
 
-	<para>DOCUMENT AND MODIFIED VERSIONS OF THE DOCUMENT ARE PROVIDED UNDER THE TERMS OF THE GNU FREE DOCUMENTATION LICENSE WITH THE FURTHER UNDERSTANDING THAT: <orderedlist><listitem><para>DOCUMENT IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTY OF ANY KIND, EITHER EXPRESSED OR IMPLIED, INCLUDING, WITHOUT LIMITATION, WARRANTIES THAT THE DOCUMENT OR MODIFIED VERSION OF THE DOCUMENT IS FREE OF DEFECTS MERCHANTABLE, FIT FOR A PARTICULAR PURPOSE OR NON-INFRINGING. THE ENTIRE RISK AS TO THE QUALITY, ACCURACY, AND PERFORMANCE OF THE DOCUMENT OR MODIFIED VERSION OF THE DOCUMENT IS WITH YOU. SHOULD ANY DOCUMENT OR MODIFIED VERSION PROVE DEFECTIVE IN ANY RESPECT, YOU (NOT THE INITIAL WRITER, AUTHOR OR ANY CONTRIBUTOR) ASSUME THE COST OF ANY NECESSARY SERVICING, REPAIR OR CORRECTION. THIS DISCLAIMER OF WARRANTY CONSTITUTES AN ESSENTIAL PART OF THIS LICENSE. NO USE OF ANY DOCUMENT OR MODIFIED VERSION OF THE DOCUMENT IS AUTHORIZED HEREUNDER EXCEPT UNDER THIS DISCLAIMER; AND</para></listitem><listitem><para>UNDER NO CIRCUMSTANCES AND UNDER NO LEGAL THEORY, WHETHER IN TORT (INCLUDING NEGLIGENCE), CONTRACT, OR OTHERWISE, SHALL THE AUTHOR, INITIAL WRITER, ANY CONTRIBUTOR, OR ANY DISTRIBUTOR OF THE DOCUMENT OR MODIFIED VERSION OF THE DOCUMENT, OR ANY SUPPLIER OF ANY OF SUCH PARTIES, BE LIABLE TO ANY PERSON FOR ANY DIRECT, INDIRECT, SPECIAL, INCIDENTAL, OR CONSEQUENTIAL DAMAGES OF ANY CHARACTER INCLUDING, WITHOUT LIMITATION, DAMAGES FOR LOSS OF GOODWILL, WORK STOPPAGE, COMPUTER FAILURE OR MALFUNCTION, OR ANY AND ALL OTHER DAMAGES OR LOSSES ARISING OUT OF OR RELATING TO USE OF THE DOCUMENT AND MODIFIED VERSIONS OF THE DOCUMENT, EVEN IF SUCH PARTY SHALL HAVE BEEN INFORMED OF THE POSSIBILITY OF SUCH DAMAGES.</para></listitem></orderedlist></para>
+	<para>ESTE DOCUMENTO Y LAS VERSIONES MODIFICADAS DEL MISMO SE PROPORCIONAN SEGÚN LAS CONDICIONES ESTABLECIDAS EN LA LICENCIA DE DOCUMENTACIÓN LIBRE DE GNU (GFDL) Y TENIENDO EN CUENTA QUE: <orderedlist><listitem><para>EL DOCUMENTO SE PROPORCIONA "TAL CUAL", SIN GARANTÍA DE NINGÚN TIPO, NI EXPLÍCITA NI IMPLÍCITA INCLUYENDO, SIN LIMITACIÓN, GARANTÍA DE QUE EL DOCUMENTO O VERSIÓN MODIFICADA DE ÉSTE CAREZCA DE DEFECTOS COMERCIALES, SEA ADECUADO A UN FIN CONCRETO O INCUMPLA ALGUNA NORMATIVA. TODO EL RIESGO RELATIVO A LA CALIDAD, PRECISIÓN Y UTILIDAD DEL DOCUMENTO O SU VERSIÓN MODIFICADA RECAE EN USTED. SI CUALQUIER DOCUMENTO O VERSIÓN MODIFICADA DE AQUÉL RESULTARA DEFECTUOSO EN CUALQUIER ASPECTO, USTED (Y NO EL REDACTOR INICIAL, AUTOR O CONTRIBUYENTE) ASUMIRÁ LOS COSTES DE TODA REPARACIÓN, MANTENIMIENTO O CORRECCIÓN NECESARIOS. ESTA RENUNCIA DE GARANTÍA ES UNA PARTE ESENCIAL DE ESTA LICENCIA. NO SE AUTORIZA EL USO DE NINGÚN DOCUMENTO NI VERSIÓN MODIFICADA DE ÉSTE POR EL PRESENTE, SALVO DENTRO DEL CUMPLIMIENTO DE LA RENUNCIA;Y</para></listitem><listitem><para>BAJO NINGUNA CIRCUNSTANCIA NI BAJO NINGUNA TEORÍA LEGAL, SEA POR ERROR (INCLUYENDO NEGLIGENCIA), CONTRATO O DE ALGÚN OTRO MODO, EL AUTOR, EL ESCRITOR INICIAL, CUALQUIER CONTRIBUIDOR, O CUALQUIER DISTRIBUIDOR DEL DOCUMENTO O VERSIÓN MODIFICADA DEL DOCUMENTO, O CUALQUIER PROVEEDOR DE CUALQUIERA DE ESAS PARTES, SERÁ RESPONSABLE ANTE NINGUNA PERSONA POR NINGÚN DAÑO DIRECTO, INDIRECTO, ESPECIAL, INCIDENTAL O DERIVADO DE NINGÚN TIPO, INCLUYENDO, SIN LIMITACIÓN DAÑOS POR PÉRDIDA DE MERCANCÍAS, PARO TÉCNICO, FALLO INFORMÁTICO O MAL FUNCIONAMIENTO O CUALQUIER OTRO POSIBLE DAÑO O PÉRDIDAS DERIVADAS O RELACIONADAS CON EL USO DEL DOCUMENTO O SUS VERSIONES MODIFICADAS, AUNQUE DICHA PARTE HAYA SIDO INFORMADA DE LA POSIBILIDAD DE QUE SE PRODUJESEN DICHOS DAÑOS.</para></listitem></orderedlist></para>
   </legalnotice>
 
 
@@ -59,7 +59,7 @@
    <authorgroup> 
    <author> 
 		<firstname>Sun</firstname> 
-		<surname>GNOME Documentation Team</surname> 
+		<surname>Equipo de documentación de Gnome</surname> 
 		<affiliation> 
 	  	<orgname>Sun Microsystems</orgname> 
 	  	<address> <email>gdocteam@sun.com</email> </address> 
@@ -70,7 +70,7 @@
 		<firstname>Judith</firstname> 
 		<surname>Samson</surname> 
 		<affiliation> 
-	  	<orgname>GNOME Documentation Project</orgname> 
+	  	<orgname>Proyecto de documentación de Gnome</orgname> 
 	  	<address> <email>judith@samsonsource.com</email> </address> 
 		</affiliation> 
    </author> 
@@ -99,43 +99,43 @@
 
     <revhistory>
       <revision> 
-		<revnumber>System Log Viewer Manual V2.4</revnumber> 
-		<date>October 2005</date> 
+		<revnumber>Manual del visor de registros del sistema V2.4</revnumber> 
+		<date>Octubre de 2005</date> 
 		<revdescription> 
 	  		<para role="author">Vincent Noel <email>vincent.noel@gmail.com</email></para>
-	  		<para role="publisher">GNOME Documentation Project</para>
+	  		<para role="publisher">Proyecto de documentación de Gnome</para>
 		</revdescription> 
       </revision>
       <revision> 
-		<revnumber>System Log Viewer Manual V2.3</revnumber> 
-		<date>October 2002</date> 
+		<revnumber>Manual del visor de registros del sistema V2.3</revnumber> 
+		<date>Octubre de 2003</date> 
 		<revdescription> 
 	  		<para role="author">Sun GNOME Documentation Team <email>gdocteam@sun.com</email></para>
-	  		<para role="publisher">GNOME Documentation Project</para>
+	  		<para role="publisher">Proyecto de documentación de Gnome</para>
 		</revdescription> 
       </revision>
       <revision> 
 		<revnumber>System Log Viewer Manual V2.2</revnumber> 
-		<date>August 2002</date> 
+		<date>Agosto de 2002</date> 
 		<revdescription> 
 	  		<para role="author">Sun GNOME Documentation Team <email>gdocteam@sun.com</email></para>
-	  		<para role="publisher">GNOME Documentation Project</para>
+	  		<para role="publisher">Proyecto de documentación de Gnome</para>
 		</revdescription> 
       </revision>
       <revision> 
 		<revnumber>System Log Viewer Manual V2.1</revnumber> 
-		<date>July 2002</date> 
+		<date>Julio de 2002</date> 
 		<revdescription> 
 	  		<para role="author">Sun GNOME Documentation Team <email>gdocteam@sun.com</email></para>
-	  		<para role="publisher">GNOME Documentation Project</para>
+	  		<para role="publisher">Proyecto de documentación de Gnome</para>
 		</revdescription> 
       </revision>
       <revision> 
 		<revnumber>System Log Viewer Manual V2.0</revnumber> 
-		<date>May 2002</date> 
+		<date>Mayo de 2002</date> 
 		<revdescription> 
 	  		<para role="author">Sun GNOME Documentation Team <email>gdocteam@sun.com</email></para>
-	  		<para role="publisher">GNOME Documentation Project</para>
+	  		<para role="publisher">Proyecto de documentación de Gnome</para>
 		</revdescription> 
       </revision> 
       <revision> 
@@ -143,14 +143,14 @@
 		<date>2000</date> 
 		<revdescription> 
 	  		<para role="author">Judith Samson <email>judith@samsonsource.com</email></para>
-	  		<para role="publisher">GNOME Documentation Project</para>
+	  		<para role="publisher">Proyecto de documentación de Gnome</para>
 			</revdescription> 
       </revision> 
     </revhistory> 
 
     <releaseinfo>This manual describes version 2.12 of System Log Viewer.</releaseinfo> 
     <legalnotice> 
-      <title>Feedback</title> 
+      <title>Comentarios</title> 
       <para>To report a bug or make a suggestion regarding the System Log Viewer application or this manual, follow the directions in the <ulink url="ghelp:gnome-feedback" type="help">GNOME Feedback Page</ulink>.</para>
 <!-- Translators may also add here feedback address for translations -->
     </legalnotice> 
@@ -164,7 +164,7 @@
 <!-- ============= Introduction ============================== -->
 
   <sect1 id="syslog-introduction"> 
-    <title>Introduction</title> 
+    <title>Introducción</title> 
 
       <para><application>System Log Viewer</application> is a graphical, menu-driven viewer that you can use to view and monitor your system logs. <application>System Log Viewer</application> comes with a few functions that can help you manage your logs, including a calendar, log monitor and log statistics display.</para>
 
@@ -175,18 +175,18 @@
   </sect1>
 
   <sect1 id="syslog-getting-started">
-    <title>Getting Started</title> 
+    <title>Iniciando</title> 
 
     <para>You can start <application>System Log Viewer</application> in the following ways:</para> 
     <variablelist>
     	<varlistentry>
-    		<term><guimenu>Applications</guimenu> menu</term>
+    		<term>Menú <guimenu>Aplicaciones</guimenu></term>
     		<listitem>
     		<para>Choose <menuchoice><guisubmenu>System Tools</guisubmenu><guimenuitem>System Log</guimenuitem></menuchoice>.</para>
     		</listitem>
     	</varlistentry>
     	<varlistentry>
-    		<term>Command line</term>
+    		<term>Línea de órdenes</term>
     		<listitem>
     		<para>Type <command>gnome-system-log</command>, then press <keycap>Return</keycap>.</para>
     		<para> 		 
@@ -221,7 +221,7 @@
 <!-- ================ Usage ================================ -->
 
   <sect1 id="syslog-usage"> 
-    <title>Usage</title>
+    <title>Uso</title>
 
     <sect2 id="syslog-open">
     	<title>To View a Log</title>
@@ -272,7 +272,7 @@
     </sect2>
     
     <sect2 id="syslog-close">
-    	<title>To Close a Log</title>
+    	<title>Para cerrar un registro</title>
     	<para>To close a log, choose <menuchoice><guimenu>Log</guimenu><guimenuitem>Close</guimenuitem></menuchoice>.</para>
     </sect2>
     
